<resources>
    <string name="app_name">The Time Condo</string>

    <string name="maint">แจ้งซ่อม</string>
    <string name="post">พัสดุ</string>
    <string name="map">แผนที่</string>
    <string name="announ">ประกาศ</string>
    <string name="total">ค่าน้ำ</string>


    <!--hardsai-->
    <string name="bg_room">bg_room</string>
    <string name="room">room</string>

    <string name="detail_item_announ">Detail</string>
    <string name="title_item_announ">Title</string>
    <!--endhardsai-->

    <!--prem-->
    <string name="str_des_maint">เลือกรายการที่ต้องการซ่อม</string>
    <string name="str_checkBox_aircon">เครื่องปรับอากาศ</string>
    <string name="str_checkBox_stove">เตาไฟฟ้า</string>
    <string name="str_checkBox_electric">ระบบไฟฟ้า</string>
    <string name="str_checkBox_water">ระบบน้ำประปา</string>
    <string name="str_checkBox_pipe">ระบบท่อ</string>
    <string name="str_checkBox_bathroom">สุขภัณฑ์</string>
    <string name="str_input_tel">**กรุณากรอกเบอร์ติดต่อกลับ</string>
    <string name="str_input_other">กรุณาระบุปัญหา</string>
    <string name="str_checkBox_other">อื่นๆ</string>
    <!--endprem-->


    <!--PLENG-->
    <string name="Add">เพิ่มพัสดุ</string>
    <string name="Delete">ลบพัสดุ</string>
    <string name="Search">ค้นหาพัสดุ</string>
    <color name="BackGround">#FFF8F8</color>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room_a121">room A121</string>
    <string name="bill">ยอดค้างชำระ</string>
    <string name="billpresent">ยอดปัจจุบัน</string>

    <!--Green-->
    <string name="bgRoom">bg_room</string>
    <string name="Room">Room</string>
    <string name="room_number">หมายเลขห้อง</string>
    <string name="name">ชื่อ</string>
    <string name="numphone">หมายเลขโทรศัพท์</string>
    <string name="waterfee">ค่าน้ำ</string>
    <string name="numcar">ABxxx</string>
    <string name="car">รถยนต์</string>
    <string name="nummotorcycle">ABxxx</string>
    <string name="motorcycle">รถมอเตอร์ไซค์</string>

    <!-- firebase -->
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>




</resources>
