<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maintenancefee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:orientation="vertical"

    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="215dp">

        <ImageView
            android:id="@+id/bgttc"
            android:layout_width="448dp"
            android:layout_height="154dp"
            android:background="@drawable/bgttc"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/picpp"
            android:layout_width="101dp"
            android:layout_height="122dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:src="@drawable/picpp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="44dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/house"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/bgttc"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="266dp"
            android:layout_marginRight="266dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/home"
            app:layout_constraintEnd_toStartOf="@+id/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/numroom"
        android:layout_width="114dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/room_number"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@+id/bgttc"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="184dp"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="176dp"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/numroom"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="216dp" />

    <TextView
        android:id="@+id/numphone"
        android:layout_width="224dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/numphone"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="243dp"
        tools:textSize="18sp" />
    <ImageView
        android:id="@+id/water"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nummotorcycle"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="395dp" />

    <TextView
        android:id="@+id/waterfee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/waterfee"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/water"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="385dp" />



    <ImageView
        android:id="@+id/motorcycleImage"
        android:layout_width="53dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/motorcycle"
        app:layout_constraintTop_toTopOf="@+id/numphone"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/motorcycle"
        android:layout_width="121dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:text="@string/motorcycle"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/motorcycleImage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="289dp" />


    <TextView
        android:id="@+id/nummotorcycle"
        android:layout_width="224dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nummotorcycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/motorcycle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="320dp"
        tools:textSize="18sp" />



    <ImageView
        android:id="@+id/carImage"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nummotorcycle"
        tools:ignore="DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="395dp" />

    <TextView
        android:id="@+id/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/car"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/carImage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="385dp" />

    <TextView
        android:id="@+id/numcar"
        android:layout_width="224dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/numcar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="385dp"
        tools:textSize="18sp" />


</LinearLayout>